# apollo-agent

./: .dockerignore  .envrc.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Dockerfile.azure  Dockerfile_az  LICENSE.md  Makefile  README.md  pyproject.toml  requirements-azure.in  requirements-azure.txt  requirements-cloudrun.in  requirements-cloudrun.txt  requirements-dev.in  requirements-dev.txt  requirements-export.in  requirements-lambda.in  requirements-lambda.txt  requirements.in  requirements.txt  setup.py
.circleci/: config.yml  vuln-scan-config.yml
docs/: index.html  swagger.json  swagger_template.json
examples/: EXAMPLES.md  README-docker-compose.md  README.md  docker-compose.yml
mcd-agent-common/: README.md  pyproject.toml
mcd-egress-agent-common/: README.md  pyproject.toml
mcd-egress-agent-common/apollo/egress/agent/backend/: backend_client.py
mcd-egress-agent-common/apollo/egress/agent/config/: config_manager.py  local_config.py
mcd-egress-agent-common/apollo/egress/agent/events/: events_client.py  sse_client_receiver.py
mcd-egress-agent-common/apollo/egress/agent/service/: base_egress_service.py  logs_service.py  metrics_service.py  operations_runner.py  results_processor.py  results_publisher.py  storage_service.py
mcd-egress-agent-common/apollo/egress/agent/utils/: result_utils.py  utils.py
scripts/: smoke_test_mulesoft_extract_sources.py  smoke_test_yet_1229.py
tests/: agent_commands_tests.py  platform.py  sample_proxy_client.py  test_agent_commands.py  test_agent_operation.py  test_agent_response.py  (+69 more)
(+392 files in other folders)
