[project]
name = "mcd-egress-agent-common"
version = "0.0.1"

[tool.pyright]
enableTypeIgnoreComments = true
exclude = [
  "**/__pycache__",
  "**/.*",
  "tests",
  "examples",
  ".venv",
]
reportMissingParameterType = true
reportMissingTypeArgument = false
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = "."
